--- a/styles/index.css
+++ b/styles/index.css
@@ -2,11 +2,16 @@
     margin: 0;
     padding: 0;
     font-family: Helvetica;
+
   }
   .navbar {
     background-color: #181844;
     padding: 10px;
     display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
   }
   .left {
     display: flex;
